--- a/package.json
+++ b/package.json
@@ -1,46 +1,40 @@
 {
-  "name": "portfolio",
+  "name": "portfolio-v2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint"
   },
   "dependencies": {
-    "@radix-ui/react-label": "^2.0.2",
-    "@react-email/components": "^0.0.7",
-    "@react-email/tailwind": "^0.0.8",
-    "@tabler/icons-react": "^2.47.0",
-    "@tsparticles/engine": "^3.3.0",
-    "@tsparticles/react": "^3.0.0",
-    "@tsparticles/slim": "^3.3.0",
-    "@types/node": "20.3.2",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "autoprefixer": "10.4.14",
-    "clsx": "^1.2.1",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.7",
-    "framer-motion": "^10.18.0",
+    "@gsap/react": "^2.1.2",
+    "@tabler/icons-react": "^3.35.0",
+    "@types/three": "^0.181.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
+    "gsap": "^3.13.0",
+    "lucide-react": "^0.555.0",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "13.4.8",
-    "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.10.1",
-    "react-intersection-observer": "^9.5.2",
-    "react-tooltip": "^5.26.3",
-    "react-type-animation": "^3.2.0",
-    "react-vertical-timeline-component": "^3.6.0",
-    "resend": "^0.16.0",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.5"
+    "next": "16.0.5",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "react-icons": "^5.5.0",
+    "resend": "^6.5.2",
+    "tailwind-merge": "^3.4.0",
+    "three": "^0.181.2",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
-    "@types/react-vertical-timeline-component": "^3.3.3"
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "babel-plugin-react-compiler": "1.0.0",
+    "eslint": "^9",
+    "eslint-config-next": "16.0.5",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
