--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "gsap": "^3.13.0",
     "lucide-react": "^0.555.0",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "16.0.5",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "^16.0.10",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "resend": "^6.5.2",
     "tailwind-merge": "^3.4.0",
@@ -33,7 +33,7 @@
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
-    "eslint-config-next": "16.0.5",
+    "eslint-config-next": "^16.0.10",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
