--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "gsap": "^3.13.0",
     "lucide-react": "^0.555.0",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "^16.0.10",
+    "next": "latest",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
